finished styling and added gulpfile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quiz-tile.jpg</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./resources/favicons.png">
@@ -10,7 +11,7 @@
 <div class="navbar">
     <div class="branding">
         <a href="" class="logo"></a>
-        <a href="" class="power">Powered By CloudApp</a>
+        <a href="" class="power"><span>Powered By </span><span> CloudApp</span></a>
     </div>
     <div class="file-name">quiz-tile.jpg</div>
 
@@ -21,17 +22,21 @@
         <a class="menu"></a>
     </div>
 </div>
-<div class="tile">
-    <div class="avatar">
-        <img src="./resources/ava.gif" alt="">
-    </div>
-    <div class="card">
-        <h5>Christopher Reece <span>scored 100%</span></h5>
-        <h5>1h</h5>
-        <p>You made me swallow my gum! That's going to be in my digestive tract for seven years!</p>
-        <h1>The Ultimate Pilgrim Quiz</h1>
-        <h5>Sony</h5>
-        <img src="./resources/pilgrim.jpg" alt="">
+<div class="container">
+    <div class="tile">
+        <div class="avatar">
+            <img src="./resources/ava.gif" alt="">
+        </div>
+        <div class="card">
+            <div class="quiz">
+                <h5 class="user">Christopher Reece <span class="green-text">scored 100%</span></h5>
+                <h5 class="time">1h</h5>
+                <p class="desc">You made me swallow my gum! That's going to be in my digestive tract for seven years!</p>
+                <h3 class="quiz-title">The Ultimate Pilgrim Quiz</h3>
+                <h5 class="publisher">Sony</h5>
+            </div>
+            <img src="./resources/pilgrim.jpg" alt="">
+        </div>
     </div>
 </div>
 </body>
